[gd_scene load_steps=10 format=2]

[ext_resource path="res://Actors/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Actors/Box.tscn" type="PackedScene" id=2]
[ext_resource path="res://Actors/Exit.tscn" type="PackedScene" id=3]
[ext_resource path="res://environment/BasicFloor.tscn" type="PackedScene" id=4]
[ext_resource path="res://Actors/Platform.tscn" type="PackedScene" id=5]
[ext_resource path="res://levels/Level1.gd" type="Script" id=6]
[ext_resource path="res://objects/Button.tscn" type="PackedScene" id=7]
[ext_resource path="res://UI/Cursor.tscn" type="PackedScene" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 451.769, 11.9109 )

[node name="Level1" type="Node2D"]
script = ExtResource( 6 )

[node name="BasicTilemap" parent="." instance=ExtResource( 4 )]
tile_data = PoolIntArray( -1, 1, 0, -65536, 1, 0, -65535, 1, 0, -65534, 1, 0, -65533, 1, 0, -65532, 1, 0, -65531, 1, 0, -65530, 1, 0, -65529, 1, 0, -65528, 1, 0, -65527, 1, 0, -65526, 1, 0, -65525, 1, 0, 65535, 1, 0, 0, 1, 0, 11, 1, 0, 131071, 1, 0, 65536, 1, 0, 65547, 1, 0, 196607, 1, 0, 131072, 1, 0, 131083, 1, 0, 262143, 1, 0, 196608, 1, 0, 196619, 1, 0, 327679, 1, 0, 262144, 1, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 1, 0, 393215, 1, 0, 327680, 1, 0, 327681, 1, 0, 327682, 1, 0, 327683, 1, 0, 327684, 1, 0, 327689, 1, 0, 327690, 1, 0, 327691, 1, 0, 458751, 1, 0, 393216, 1, 0, 393217, 1, 0, 393218, 1, 0, 393219, 1, 0, 393220, 1, 0, 393225, 1, 0, 393226, 1, 0, 393227, 1, 0 )

[node name="Exit" parent="." instance=ExtResource( 3 )]
position = Vector2( 945.629, 320.317 )

[node name="player" parent="." instance=ExtResource( 1 )]
position = Vector2( 539.251, 344.971 )

[node name="Box" parent="." instance=ExtResource( 2 )]
position = Vector2( 452.293, 351.84 )

[node name="PlatformLeft" parent="." instance=ExtResource( 5 )]
position = Vector2( 206.544, 339.372 )

[node name="PlatformRight" parent="." instance=ExtResource( 5 )]
position = Vector2( 660.259, 618.719 )

[node name="Button" parent="." groups=[
"button",
] instance=ExtResource( 7 )]
position = Vector2( 377.066, 365.177 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 651.402, 721.372 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -32.1086 )
shape = SubResource( 1 )

[node name="Box2" parent="." instance=ExtResource( 2 )]
position = Vector2( 452.255, 305.167 )

[node name="Cursor" parent="." instance=ExtResource( 8 )]
position = Vector2( -610.627, 90.0607 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
